force-app/main/default/objects/PMC_CPQ_RawMaterial__c/PMC_CPQ_RawMaterial__c.object-meta.xml
<CustomObject>
    <description>This Object is to store the details of the Blended Components.</description>
    <label>Raw Material</label>
    <nameField>
        <displayFormat>RM-{0000000000}</displayFormat>
        <label>Raw Material Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>