force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Account__c</fullName>
    <description>This field is to show the Account associated with the record.</description>
    <formula>PMC_CPQ_Quote__r.SBQQ__Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>