force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_ListCFR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ListCFR__c</fullName>
    <description>This field is to store the List CFR amount.</description>
    <label>List CFR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>