force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Raw Materials</relationshipLabel>
    <relationshipName>Raw_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>