force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSKU__c</fullName>
    <description>This field is to show the SKU of the Product.</description>
    <formula>PMC_CPQ_Product__r.StockKeepingUnit</formula>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>