force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quantity__c</fullName>
    <description>This field is to store the returned quantity from the blend optimizer for that component.</description>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>