force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_QuantityTons__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuantityTons__c</fullName>
    <formula>( PMC_CPQ_Quantity__c ) * PMC_CPQ_QuoteLine__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Tons</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>