force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the Quote associated with the record.</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Raw Materials</relationshipLabel>
    <relationshipName>Raw_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>