force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the respective Quote Line.</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Raw Materials</relationshipLabel>
    <relationshipName>Raw_Materials1</relationshipName>
    <type>Lookup</type>
</CustomField>