force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_RawMaterialName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterialName__c</fullName>
    <description>This field is to capture the name of the Raw Material.</description>
    <label>Raw Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>