force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/PMC_CPQ_SoldCFR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldCFR__c</fullName>
    <description>This field is to store the Sold CFR</description>
    <label>Sold CFR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>