force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Location__c</fullName>
    <formula>PMC_CPQ_QuoteLine__r.PMC_CPQ_ProductLocation__r.PMC_CPQ_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Location</label>
    <type>Text</type>
</CustomField>