force-app/main/default/objects/PMC_CPQ_RawMaterial__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>PMC_CPQ_QuoteLine__r.SBQQ__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>